--- a/style/primary.css
+++ b/style/primary.css
@@ -55,7 +55,7 @@ h1 {
 }
 
 body {
-    background-color: rgb(37, 43, 53);
+    background-color: rgb(30, 29, 34);
     color: white;
     font-family: 'Kulim Park', sans-serif;
 }
@@ -65,9 +65,8 @@ body {
     top: 0;
     left: 0;
 
-    background-color: rgb(79, 57, 94);
-    border: 2px solid white;
-
+    background: linear-gradient(315deg, rgb(69, 110, 42), rgb(69, 110, 42), rgb(69, 110, 42), rgb(73, 66, 66), rgb(73, 66, 66), rgb(73, 66, 66));
+    
     height: 10vh;
     width: 10vh;
     animation-duration: 0.3s;
@@ -88,6 +87,7 @@ body {
 
 #home-button {
     font-size: 2em;
+    color:rgb(210, 255, 215);
 
     animation-duration:0.2s;
     animation-iteration-count: 1;
@@ -99,15 +99,24 @@ body {
 
 #home-button:hover {
     cursor: pointer;
-    color: black;
+    color:rgb(134, 122, 122);
 }
 
 .menu-Link {
+    color:rgb(210, 255, 215);
     font-size: 1.5em;
     display: block;
 }
 
 .menu-Link:hover {
     cursor: pointer;
-    color: black;
+    color:rgb(134, 122, 122);
+}
+
+.folder-Path {
+    color: rgb(30, 29, 34);
+}
+
+.current-Folder {
+    color:white;
 }
