--- a/style/primary.css
+++ b/style/primary.css
@@ -26,6 +26,39 @@
     }
 }
 
+@keyframes contentClose {
+    from {
+        height: calc(100vh - 10vw);
+        width: calc(100% - 11.5vw);
+        margin-left: calc(2px + 10vw);
+        margin-top: -2px;
+    }
+
+    to {
+        height: 14vw;
+        width: calc(100% - 86.5%);
+        margin-left: calc(2px + 85%);
+        margin-top: -2px;
+    }
+}
+
+@keyframes contentOpen {
+    from {
+        height: 14vw;
+        width: calc(100% - 86.5%);
+        margin-left: calc(2px + 85%);
+        margin-top: -2px;
+    }
+
+    to {
+        height: calc(100vh - 10vw);
+        width: calc(100% - 11.5vw);
+        margin-left: calc(2px + 10vw);
+        margin-top: -2px;
+    }
+
+}
+
 @keyframes menuOpenContent {
     from {
         opacity: 0;
@@ -61,9 +94,6 @@ body {
 }
 
 #corner-MENU {
-    position: fixed;
-    top: 0;
-    left: 0;
 
     border: 2px solid rgb(210, 255, 215);
     background-size: 10vh;
@@ -121,4 +151,25 @@ body {
 
 .current-Folder {
     color:white;
+}
+
+#main-Content {
+    background-color:rgb(11, 19, 13);
+    border: 2px solid rgb(210, 255, 215);
+    background-size: 10vh;
+    background-position: center;
+    
+    height: calc(100vh - 10vw);
+    width: calc(100% - 11.5vw);
+    margin-left: calc(2px + 10vw);
+    margin-top: -2px;
+
+    animation-duration: 0.3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+#inside-Content {
+    padding: 5%;
+    padding-top: 2.5%;
 }
