--- a/style/primary.css
+++ b/style/primary.css
@@ -59,6 +59,7 @@
 @keyframes contentClose {
     from {
         height: max-content;
+        min-height: 50vh;
         width: calc(100% - 11.5vw);
         margin-left: calc(2px + 10vw);
         margin-top: -2px;
@@ -66,6 +67,7 @@
 
     to {
         height: 14vw;
+        min-height: 14vw;
         width: calc(100% - 86.5%);
         margin-left: calc(2px + 85%);
         margin-top: -2px;
@@ -75,6 +77,7 @@
 @keyframes contentOpen {
     from {
         height: 14vw;
+        min-height: 14vw;
         width: calc(100% - 86.5%);
         margin-left: calc(2px + 85%);
         margin-top: -2px;
@@ -82,6 +85,7 @@
 
     to {
         height: max-content;
+        min-height: 50vh;
         width: calc(100% - 11.5vw);
         margin-left: calc(2px + 10vw);
         margin-top: -2px;
@@ -195,6 +199,7 @@ a:hover {
     background-position: center;
     
     /*height: calc(100vh - 11vw);*/
+    min-height: 50vh;
     height: max-content;
     width: calc(100% - 11.5vw);
     margin-left: calc(2px + 10vw);
