--- a/style/primary.css
+++ b/style/primary.css
@@ -134,7 +134,7 @@ body {
 #corner-MENU {
 
     border: 2px solid rgb(210, 255, 215);
-    background-size: 10vh;
+    background-size: 10vw;
     background-position: center;
     
     height: 10vw;
